_sass/academic/_layout.scss
/* ... */
/**
 * Site footer
 */

.site-footer {
  @include size(vsmall);
  border-top: 1px solid $grey-color-light;
  color: $grey-color;
  -webkit-flex-shrink: 0;
  -moz-flex-shrink: 0;
  flex-shrink: 0;

  a {
    color: $grey-color;
  }

  .footer-col {
    list-style: none;
    margin-left: 0;
    margin-top: $spacing-unit/2;
    margin-bottom: $spacing-unit;

    .author, .author a {
      color: $grey-color-light;
    }
  }

  .footer-col-1 {
    width: -webkit-calc(65% - (#{$spacing-unit} / 2));
    width:         calc(65% - (#{$spacing-unit} / 2));
    float: left;
  }

  .footer-col-2 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
    float: right;
  }

  .single-col {
    clear: both;
    list-style: none;
    margin: 0;
    text-align: center;

    li {
      display: inline-block;
      margin-left: 5px;
      margin-right: 5px;
    }

    .username {
      display: none;
    }

    svg {
      width: 20px;
      height: 20px;
    }

    .icon {
      &:hover {
        circle,
        path:last-of-type {
          fill: $text-color;
        }
      }
    }
  }

  .nav-list-title,
  .contact-list-title {
    display: none;
  }

  .contact-list {
    a .username:hover {
      text-decoration: underline;
    }

    @include media-query($on-palm) {
      margin-bottom: $spacing-unit / 2;
    }
  }

  .bottom {
    color: $grey-color-light;
    width: 100%;
    clear: both;
    float: none;
    text-align: center;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    @include media-query($on-palm) {
      margin-top: 0px;
    }

    a {
      color: $grey-color-light;
    }

    .cc-licence {
      text-transform: uppercase;
    }

    .lang-selector {
      display: inline-block;
      list-style: none;
      color: $grey-color;
      margin: $spacing-unit / 4 0 0 0;
      padding: 10px;

      @include media-query($on-palm) {
        text-align: left;
        padding-left: 0px;
        margin: 0px 0px $spacing-unit/2 0px;

        .lang-intro {
          font-weight: bold;
        }
      }

      .lang {
        display: inline-block;
        text-transform: lowercase;

        a {
          color: $grey-color;
        }

        &:nth-child(n+3) {
          &:before {
            content:"|"
          }
        }
      }
    }
  }

}

@include media-query($on-laptop) {
  .site-footer {
    @include size(small);
  }
}

@include media-query($on-palm) {
  .site-footer {
    .footer-col-1,
    .footer-col-2 {
      width:100%;
      float: none;
    }

    .nav-list-title,
    .contact-list-title {
      display: inline;
      font-weight: bold;
    }

    .nav-list {
      margin-top: 0;
    }

    .contact-list {
      text-align: left;
      margin-top: 0;

      li {
        display: block;
      }

      .username {
        display: inline;
      }
    }

    .bottom {
      text-align: center;
    }
  }

}

/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0 $spacing-unit / 2 0;
  width: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  -moz-flex: 1 0 auto;
  flex: 1 0 auto;
}

.post-content {
  padding-bottom: $spacing-unit;
  width: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  -moz-flex: 1 0 auto;
  flex: 1 0 auto;
  text-align: justify;
  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;

  h1, h2, h3, h4, h5, h6 {
    text-align: left;
  }

  // Added by jekyll-scholar
  .bibliography {
    list-style-type: none;
    text-align: left;
    font-size: 0.875em;
  }
}

.page-heading {
  margin-top: 0;
}

// .pitch {
//   h2:first-of-type {
//     margin-top: 0;
//   }
// }

.archive {
  margin-top: $spacing-unit / 4;
  width: 100%;
}

.post-list {
  margin-left: 0;
  list-style: none;

  .last-update {
    display: none;
    color: $grey-color-light;
    a {
      color: $grey-color-light;
    }
  }

  > li {
    margin-bottom: $spacing-unit;

    &:hover .last-update {
      display: inline-block;
    }
  }

  .post-link {
    &:hover {
      text-decoration: none;
    }
  }

  .post-meta {
    font-size: $small-font-size;
    font-family: $alt-font-family;
    font-weight: 200;
    color: $grey-color;
  }

  .post-thumbnail-wrapper {
    width: 100%;
    margin-top: $spacing-unit / 4;
    margin-bottom: $spacing-unit / 4;
    text-align: justify;
    -webkit-hyphens: auto;
    -ms-hyphens: auto;
    hyphens: auto;

    .post-thumbnail-box-1 {
      display: inline-block;
      float: left;
      // Set #text nodes' height (from <picture>) to 0
      font-size: 0px;
      line-height: 0px;
      width: $post-list-thumbnail-width;
    }

    .post-thumbnail-box-2 {
      display: inline-block;
      padding-left: $spacing-unit / 2;
      width: -webkit-calc(100% - #{($spacing-unit / 2)} - #{$post-list-thumbnail-width});
      width: calc(100% - #{($spacing-unit / 2)} - #{$post-list-thumbnail-width});
    }

    .post-thumbnail {
      width: 100%;
    }

    .post-thumbnail-summary {
      color: $text-color;
      display: inline-block;
      width: 100%;
    }
  }

  .post-thumbnail-wrapper::after {
    content: "";
    clear: both;
    display: table;
  }



  @include media-query($on-palm) {
    .post-thumbnail-wrapper {
      .post-thumbnail-box-1 {
        float: none;
        width: 100%;
      }

      .post-thumbnail-box-2 {
        display: inline-block;
        padding-left: inherit;
        padding-top: $spacing-unit / 2;
        width: 100%;
      }
    }
  }

}

.pagination {
  margin-top: $spacing-unit / 4;
  margin-bottom: $spacing-unit / 4;

  a, em, span {
    margin-left: 3px;
    margin-right: 3px;
  }
}

/**
 * Posts
 */

.post {
  width: 100%;
}
/* ... */

